<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mangareader.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_manga_detail"
            app:destination="@id/navigation_manga_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.example.mangareader.ui.library.LibraryFragment"
        android:label="@string/library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.mangareader.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_downloads"
        android:name="com.example.mangareader.ui.downloads.DownloadsFragment"
        android:label="@string/downloads"
        tools:layout="@layout/fragment_downloads" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.mangareader.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_manga_detail"
        android:name="com.example.mangareader.ui.detail.MangaDetailFragment"
        android:label="Manga Details"
        tools:layout="@layout/fragment_manga_detail">
        <argument
            android:name="mangaId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_chapter_reader"
        android:name="com.example.mangareader.ui.reader.ChapterReaderFragment"
        android:label="Chapter Reader"
        tools:layout="@layout/fragment_chapter_reader">
        <argument
            android:name="chapterId"
            app:argType="string" />
        <argument
            android:name="mangaId"
            app:argType="string" />
    </fragment>
</navigation>